--- a/Assets/Packages/DeviceDebugger/IngameDebugConsole/Editor/IngameDebugConsole.Editor.asmdef
+++ b/Assets/Packages/DeviceDebugger/IngameDebugConsole/Editor/IngameDebugConsole.Editor.asmdef
@@ -1,11 +1,11 @@
 {
-    "name": "ThanhDV.DeviceDebugger",
-    "rootNamespace": "ThanhDV.DeviceDebugger",
+    "name": "IngameDebugConsole.Editor",
     "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:3de88c88fbbb8f944b9210d496af9762"
+        "IngameDebugConsole.Runtime"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
