--- a/Assets/Packages/DeviceDebugger/package.json
+++ b/Assets/Packages/DeviceDebugger/package.json
@@ -1,12 +1,13 @@
 {
     "name": "thanhdv.devicedebugger",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "displayName": "ThanhDV's DeviceDebugger",
     "description": "This library contains tools for on-device debugging.",
     "unity": "2022.3",
     "keywords": [
         "Utilities",
-        "In-game debug console"
+        "In-game debug console",
+        "Graphy"
     ],
     "author": {
         "name": "ThanhDV",
